--- a/agendamento-museu/package.json
+++ b/agendamento-museu/package.json
@@ -4,9 +4,7 @@
   "description": "A scheduling system for museum visits.",
   "main": "api/index.js",
   "scripts": {
-    "start": "ts-node src/app.ts",
-    "build": "tsc",
-    "test": "echo \"No tests specified\" && exit 0"
+    "dev": "vercel dev"
   },
   "dependencies": {
     "express": "^4.18.2",
